# clone_nanoGPT

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: train_shakespeare_char.py
data/shakespeare_char/: prepare.py
src/: model.py  nano_gpt.py  sample.py  train.py
